[tool.poetry]
name = "bark"
version = "0.1.0"
description = ""
authors = ["Andrey Kuzmin <andromed-ku@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-requests = "^2.31.0.8"


[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'env.*',
    'venv.*'
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
